# HomeworkProject

./: .gitignore  README.md
AdversarialAttack/: Readme.md  attack.py  attack.sh  dataset.py  network.py  notebook-v2.ipynb  train.py  train.sh  util.py  visu.py
AdversarialAttack/PGD/: pgd.py  pgd_raw.py  pgd_training.py
AdversarialAttack/result/: attack_pred.npy
CmakeCUDA/: CMakeLists.txt
CmakeCUDA/CMakeTutorial/example2/: CMakeLists.txt  helloworld.cpp
CmakeCUDA/CMakeTutorial/example2/MathFunctions/: MathFunctions.cpp  MathFunctions.h
Markdown/: try.md
PintOS/: README.md
PintOS/hw/: p0.md  (+1 more)
PlantSeedClassification/: SIFT_Kmeans.py  SIFT_linearSVM.py  SIFT_polySVM.py  SIFT_rbfSVM.py  TOG_SVM.py  TOG_linearSVM.py  TOG_polySVM.py  TOG_rbfSVM.py  answer.csv  dataset.py  model.py  test.py  test.sh  test_result.npy  tmp.py  train.py  train.sh  utils.py
ToyRNN/: rnn.py  text.txt
WandbLearning/: test.py
epic_ops/: .gitignore  CMakeLists.txt  README.md  setup.py  version.py
epic_ops/epic_ops/: __init__.py  ball_query.py  ccl.py  iou.py  nms.py  pointcloud.py  reduce.py  voxelize.py
epic_ops/include/epic_ops/: ball_query.h  ccl.h  disjoint_set.h  iou.h  nms.h  reduce.h
epic_ops/include/epic_ops/utils/: atomic.h  thrust_allocator.h
epic_ops/src/: CMakeLists.txt
epic_ops/src/epic_ops/: CMakeLists.txt  ball_query.cpp  ccl.cpp  iou.cpp  nms.cpp  reduce.cpp
epic_ops/src/epic_ops/autograd/: reduce_autograd.cpp
epic_ops/src/epic_ops/cpu/: nms_cpu.cpp
epic_ops/src/epic_ops/cuda/: ball_query_cuda.cu  ccl_cuda.cu  iou_cuda.cu  nms_cuda.cu  reduce_cuda.cu
epic_ops/tools/setup_helpers/: env.py
haoran_ops/: CMakeLists.txt  LICENSE  README.md  setup.py  version.py
(+137 files in other folders)
